  . Added "default" option that allows a default value to be set for
    an invalid or missing value.
  . Invalid filters fails instead of returning unsafe value
- Fixed FastCGI impersonation for persistent connections on Windows. (Dmitry)
- Fixed wrong signature initialization in imagepng (Takeshi Abe)
- Added optimization for imageline with horizontal and vertial lines (Pierre)
- Fixed bug #39791 (Crash in strtotime() on overly long relative date
  multipliers). (Ilia)
- Fixed bug #39787 (PHP doesn't work with Apache 2.3). (mv at binarysec dot
  com).
- Fixed bug #39782 (setTime() on a DateTime constructed with a Weekday
  yields incorrect results). (Ilia)
- Fixed bug #39780 (PNG image with CRC/data error raises fatal error) (Pierre)
- Fixed bug #39775 ("Indirect modification ..." message is not shown). (Dmitry)
- Fixed bug #39763 (magic quotes are applied twice by ext/filter in
  parse_str()). (Ilia) 
- Fixed bug #39759 (Can't use stored procedures fetching multiple result
  sets in pdo_mysql). (Ilia)
- Fixed bug #39754 (Some POSIX extension functions not thread safe).
  (Ilia, wharmby at uk dot ibm dot com)
- Fixed bug #39751 (putenv crash on Windows). (KevinJohnHoffman at gmail.com)
- Fixed bug #39732 (oci_bind_array_by_name doesn't work on Solaris 64bit). 
  (Tony)
- Fixed bug #39724 (Broken build due to spl/filter usage of pcre extension).
  (Tony, Ilia)
- Fixed bug #39718 (possible crash if assert.callback is set in ini). (Ilia)
- Fixed bug #39702 (php crashes in the allocator on linux-m68k). (Dmitry)
- Fixed bug #39673 (file_get_contents causes bus error on certain offsets). 
  (Tony)
- Fixed bug #39663 (Memory leak in pg_get_notify() and a possible memory
  corruption on Windows in pgsql and pdo_pgsql extensions). (Ilia, matteo at
  beccati dot com)
- Fixed bug #39662 (Segfault when calling asXML() of a cloned SimpleXMLElement).
  (Rob, Tony)
- Fixed bug #39656 (crash when calling fetch() on a PDO statment object
  after closeCursor()). (Ilia, Tony)